--- a/proyecto/proyecto.cabal
+++ b/proyecto/proyecto.cabal
@@ -17,7 +17,8 @@ cabal-version:       >=1.10
 
 executable proyecto
   main-is:             Main.hs
-  -- other-modules:
+  other-modules:       BinomialHeap, 
+                       FibonacciHeap
   -- other-extensions:
   build-depends:       base >=4.12 && <4.13
   hs-source-dirs:      src
